--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,8 @@
 
 
           <span class="site-footer-owner"><a href="/">Main Page</a></span>
+           -
+           <span class="site-footer-owner"><a href="/Trump-Universal-Income.html">Trump Universal Income</a></span>
 
 
         <span class="site-footer-credits">&copy;2020 How Trump Wins 2020</span>
