--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,9 +49,13 @@
       <footer class="site-footer">
 
 
-          <span class="site-footer-owner"><a href="/">Main Page</a></span>
-           -
-           <span class="site-footer-owner"><a href="/Trump-Universal-Income.html">Trump Universal Income</a></span>
+          <span class="site-footer-owner">
+            <a href="/">Main Page</a>
+             -
+            <a href="/Trump-Universal-Income.html">Trump Universal Income</a>
+             - 
+            <a href="/Trump-Child-Care.html">Trump Child Care</a>
+          </span>
 
 
         <span class="site-footer-credits">&copy;2020 How Trump Wins 2020</span>
