--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,15 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
+
+      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+
+      <br clear="all">
+
+      <a href="/" class="btn">Platform Overview</a>
+      <a href="/" class="btn">Trump Universal Income</a>
+      <a href="/" class="btn">Trump Child Care</a>
+
     </header>
 
 
@@ -53,7 +55,7 @@
             <a href="/">Main Page</a>
              -
             <a href="/Trump-Universal-Income.html">Trump Universal Income</a>
-             - 
+             -
             <a href="/Trump-Child-Care.html">Trump Child Care</a>
           </span>
 
