--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <meta charset="UTF-8">
 
 {% seo %}
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -33,9 +34,9 @@
 
       <br clear="all">
 
-      <a href="/" class="btn">Platform Overview</a>
-      <a href="/" class="btn">Trump Universal Income</a>
-      <a href="/" class="btn">Trump Child Care</a>
+      <a href="/" class="btn">Project Overview</a>
+      <a href="/Trump-Universal-Care.html" class="btn">Trump Universal Income</a>
+      <a href="/Trump-Child-Care.html" class="btn">Trump Child Care</a>
 
     </header>
 
