--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <br clear="all">
 
       <a href="/" class="btn">Project Overview</a>
-      <a href="/Trump-Universal-Care.html" class="btn">Trump Universal Income</a>
+      <a href="/Trump-Universal-Income.html" class="btn">Trump Universal Income</a>
       <a href="/Trump-Child-Care.html" class="btn">Trump Child Care</a>
 
     </header>
