--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,15 @@
 
 {% seo %}
 
+    <meta property="og:image" content="http://platform.howtrumpwins2020.org/files/eagle.jpg">
+
+
+    <meta property="twitter:image" content="http://platform.howtrumpwins2020.org/files/eagle.jpg">
+    <meta property="twitter:title" content="{{ page.title | default: site.title | default: site.github.repository_name }}">
+    <meta property="twitter:description" content="{{ page.description | default: site.description | default: site.github.project_tagline }}">
+
+    <meta name="twitter:card" content="summary_large_image">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
