--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <meta property="twitter:title" content="{{ page.title | default: site.title | default: site.github.repository_name }}">
     <meta property="twitter:description" content="{{ page.description | default: site.description | default: site.github.project_tagline }}">
 
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
