--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,13 +39,13 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
-      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+      <a href="/" class="btn">Project / Platform Overview</a>
 
       <br clear="all">
 
-      <a href="/" class="btn">Project Overview</a>
       <a href="/Trump-Universal-Income.html" class="btn">Trump Universal Income</a>
       <a href="/Trump-Child-Care.html" class="btn">Trump Child Care</a>
+      
 
     </header>
 
@@ -67,6 +67,8 @@
             <a href="/Trump-Universal-Income.html">Trump Universal Income</a>
              -
             <a href="/Trump-Child-Care.html">Trump Child Care</a>
+            -
+            <a href="{{ site.github.repository_url }}">View on GitHub</a>
           </span>
 
 
