--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,9 @@
       <br clear="all">
 
       <a href="/Trump-Universal-Income.html" class="btn">Trump Universal Income</a>
+      <a href="/Trump-Universal-Care.html" class="btn">Trump Universal Care</a>
       <a href="/Trump-Child-Care.html" class="btn">Trump Child Care</a>
-      
+
 
     </header>
 
@@ -65,6 +66,8 @@
             <a href="/">Main Page</a>
              -
             <a href="/Trump-Universal-Income.html">Trump Universal Income</a>
+             -
+            <a href="/Trump-Universal-Care.html">Trump Universal Care</a>
              -
             <a href="/Trump-Child-Care.html">Trump Child Care</a>
             -
