--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
 
 
           <span class="site-footer-owner">
-            <a href="/">Main Page</a>
+            <a href="/">Project / Platform Overview</a>
              -
             <a href="/Trump-Universal-Income.html">Trump Universal Income</a>
              -
