--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
       <a href="/" class="btn">Project / Platform Overview</a>
       <a href="/Trump-Universal-Income.html" class="btn">Trump Universal Income</a>
       <a href="/Trump-Universal-Care.html" class="btn">Trump Universal Care</a>
+      <a href="/Trump-Parental-Leave.html" class="btn">Trump Parental Leave</a>
       <a href="/Trump-Child-Care.html" class="btn">Trump Child Care</a>
 
 
@@ -65,6 +66,8 @@
             <a href="/Trump-Universal-Income.html">Trump Universal Income</a>
              -
             <a href="/Trump-Universal-Care.html">Trump Universal Care</a>
+            - 
+            <a href="/Trump-Parental-Leave.html">Trump Parental Leave</a>
              -
             <a href="/Trump-Child-Care.html">Trump Child Care</a>
             -
