--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
       <a href="/Trump-Universal-Care.html" class="btn">Trump Universal Care</a>
       <a href="/Trump-Parental-Leave.html" class="btn">Trump Parental Leave</a>
       <a href="/Trump-Child-Care.html" class="btn">Trump Child Care</a>
+      <a href="/How-To-Help.html" class="btn">How To Help</a>
 
 
     </header>
@@ -66,10 +67,12 @@
             <a href="/Trump-Universal-Income.html">Trump Universal Income</a>
              -
             <a href="/Trump-Universal-Care.html">Trump Universal Care</a>
-            - 
+            -
             <a href="/Trump-Parental-Leave.html">Trump Parental Leave</a>
              -
             <a href="/Trump-Child-Care.html">Trump Child Care</a>
+            -
+            <a href="/How-To-Help.html">How To Help</a>
             -
             <a href="{{ site.github.repository_url }}">View on GitHub</a>
           </span>
