Google Search Verify

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 {% seo %}
 
     <meta property="og:image" content="http://platform.howtrumpwins2020.org/files/eagle.jpg">
-
+    <meta name="google-site-verification" content="z-emEmaarFRuKjecoqGtgzluldePUMvG9Du0RCWJk2g" />
 
     <meta property="twitter:image" content="http://platform.howtrumpwins2020.org/files/eagle.jpg">
     <meta property="twitter:title" content="{{ page.title | default: site.title | default: site.github.repository_name }}">
